--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -103,15 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "91c03282",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\15145\\AppData\\Local\\Temp\\ipykernel_39492\\828737074.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  fund['month_enddate'] = pd.to_datetime(fund['month_enddate']) + pd.offsets.MonthEnd(0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Charger rendements du fonds (alignés mensuellement)\n",
-    "fund = pd.read_csv('fund.csv')\n",
-    "fund['date'] = pd.to_datetime(fund['date']) + pd.offsets.MonthEnd(0)\n",
-    "fund = fund.set_index('date')"
+    "fund = pd.read_csv('VLUE.csv')\n",
+    "fund['month_enddate'] = pd.to_datetime(fund['month_enddate']) + pd.offsets.MonthEnd(0)\n",
+    "fund = fund.set_index('month_enddate')"
    ]
   },
   {
