Update factor_attribution notebook

--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -91,41 +91,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d59e96cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Encodage date\n",
-    "df['date'] = pd.to_datetime(df['MonthId'], format='%Y%m') + pd.offsets.MonthEnd(0)\n",
-    "df = df.set_index('date').drop(columns=['MonthId'])"
+    "df['month_enddate'] = pd.to_datetime(df['MonthId'], format='%Y%m') + pd.offsets.MonthEnd(0)\n",
+    "df = df.set_index('month_enddate').drop(columns=['MonthId'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "91c03282",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\15145\\AppData\\Local\\Temp\\ipykernel_39492\\828737074.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  fund['month_enddate'] = pd.to_datetime(fund['month_enddate']) + pd.offsets.MonthEnd(0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Charger rendements du fonds (alignés mensuellement)\n",
     "fund = pd.read_csv('VLUE.csv')\n",
-    "fund['month_enddate'] = pd.to_datetime(fund['month_enddate']) + pd.offsets.MonthEnd(0)\n",
+    "fund['month_enddate'] = pd.to_datetime(\n",
+    "    fund['month_enddate'],\n",
+    "    format='%d-%b-%y'\n",
+    ") + pd.offsets.MonthEnd(0)\n",
+    "\n",
     "fund = fund.set_index('month_enddate')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8f91e5a7",
    "metadata": {},
    "outputs": [],
@@ -136,21 +131,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "05b32426",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rendement excédentaire du fonds\n",
-    "merged['fund_excess'] = merged['fund_ret'] - merged['RF']"
+    "merged['fund_excess'] = merged['monthly_total_return'] - merged['RF']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3c9ecb72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:            fund_excess   R-squared:                       0.932\n",
+      "Model:                            OLS   Adj. R-squared:                  0.929\n",
+      "Method:                 Least Squares   F-statistic:                     311.3\n",
+      "Date:                Thu, 13 Nov 2025   Prob (F-statistic):           5.64e-75\n",
+      "Time:                        20:20:36   Log-Likelihood:                -245.59\n",
+      "No. Observations:                 149   AIC:                             503.2\n",
+      "Df Residuals:                     143   BIC:                             521.2\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:                  HAC                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -0.2014      0.088     -2.302      0.021      -0.373      -0.030\n",
+      "Mkt-RF         0.9923      0.035     28.464      0.000       0.924       1.061\n",
+      "SMB            0.1193      0.046      2.588      0.010       0.029       0.210\n",
+      "HML            0.3721      0.035     10.604      0.000       0.303       0.441\n",
+      "RMW            0.0635      0.066      0.970      0.332      -0.065       0.192\n",
+      "CMA            0.0818      0.053      1.539      0.124      -0.022       0.186\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.129   Durbin-Watson:                   2.146\n",
+      "Prob(Omnibus):                  0.569   Jarque-Bera (JB):                0.773\n",
+      "Skew:                          -0.151   Prob(JB):                        0.679\n",
+      "Kurtosis:                       3.183   Cond. No.                         4.82\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors are heteroscedasticity and autocorrelation robust (HAC) using 6 lags and without small sample correction\n"
+     ]
+    }
+   ],
    "source": [
     "# Statsmodels OLS\n",
     "X = merged[['Mkt-RF', 'SMB', 'HML', 'RMW', 'CMA']]\n",
