--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -86,12 +86,12 @@
    "outputs": [],
    "source": [
     "# Charger FF5\n",
-    "df = pd.read_csv('FF5_2x3.csv')"
+    "df = pd.read_csv('FF5+Momentum.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d59e96cf",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "91c03282",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "8f91e5a7",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "05b32426",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "3c9ecb72",
    "metadata": {},
    "outputs": [
@@ -152,29 +152,30 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:            fund_excess   R-squared:                       0.932\n",
-      "Model:                            OLS   Adj. R-squared:                  0.929\n",
-      "Method:                 Least Squares   F-statistic:                     311.3\n",
-      "Date:                Thu, 13 Nov 2025   Prob (F-statistic):           5.64e-75\n",
-      "Time:                        20:20:36   Log-Likelihood:                -245.59\n",
-      "No. Observations:                 149   AIC:                             503.2\n",
-      "Df Residuals:                     143   BIC:                             521.2\n",
-      "Df Model:                           5                                         \n",
+      "Dep. Variable:            fund_excess   R-squared:                       0.934\n",
+      "Model:                            OLS   Adj. R-squared:                  0.931\n",
+      "Method:                 Least Squares   F-statistic:                     355.7\n",
+      "Date:                Sat, 15 Nov 2025   Prob (F-statistic):           6.59e-83\n",
+      "Time:                        10:26:31   Log-Likelihood:                -242.85\n",
+      "No. Observations:                 149   AIC:                             499.7\n",
+      "Df Residuals:                     142   BIC:                             520.7\n",
+      "Df Model:                           6                                         \n",
       "Covariance Type:                  HAC                                         \n",
       "==============================================================================\n",
       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const         -0.2014      0.088     -2.302      0.021      -0.373      -0.030\n",
-      "Mkt-RF         0.9923      0.035     28.464      0.000       0.924       1.061\n",
-      "SMB            0.1193      0.046      2.588      0.010       0.029       0.210\n",
-      "HML            0.3721      0.035     10.604      0.000       0.303       0.441\n",
-      "RMW            0.0635      0.066      0.970      0.332      -0.065       0.192\n",
-      "CMA            0.0818      0.053      1.539      0.124      -0.022       0.186\n",
+      "const         -0.1686      0.088     -1.922      0.055      -0.341       0.003\n",
+      "Mkt-RF         0.9770      0.036     27.047      0.000       0.906       1.048\n",
+      "SMB            0.0910      0.042      2.144      0.032       0.008       0.174\n",
+      "HML            0.3464      0.037      9.456      0.000       0.275       0.418\n",
+      "RMW            0.0387      0.070      0.556      0.578      -0.098       0.175\n",
+      "CMA            0.1042      0.060      1.741      0.082      -0.013       0.222\n",
+      "UMD           -0.0769      0.037     -2.066      0.039      -0.150      -0.004\n",
       "==============================================================================\n",
-      "Omnibus:                        1.129   Durbin-Watson:                   2.146\n",
-      "Prob(Omnibus):                  0.569   Jarque-Bera (JB):                0.773\n",
-      "Skew:                          -0.151   Prob(JB):                        0.679\n",
-      "Kurtosis:                       3.183   Cond. No.                         4.82\n",
+      "Omnibus:                        0.610   Durbin-Watson:                   2.127\n",
+      "Prob(Omnibus):                  0.737   Jarque-Bera (JB):                0.369\n",
+      "Skew:                          -0.111   Prob(JB):                        0.831\n",
+      "Kurtosis:                       3.101   Cond. No.                         5.37\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -184,13 +185,21 @@
    ],
    "source": [
     "# Statsmodels OLS\n",
-    "X = merged[['Mkt-RF', 'SMB', 'HML', 'RMW', 'CMA']]\n",
+    "X = merged[['Mkt-RF', 'SMB', 'HML', 'RMW', 'CMA','UMD']]\n",
     "X = sm.add_constant(X)\n",
     "y = merged['fund_excess']\n",
     "\n",
     "model = sm.OLS(y, X).fit(cov_type='HAC', cov_kwds={'maxlags':6})\n",
     "print(model.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "723b8fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
