--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -64,7 +64,14 @@
     "* Nom complet : Risk-Free Rate\n",
     "* Type : float (%)\n",
     "* Définition : Taux sans risque à un mois (T-bill 1-month).\n",
-    "* Usage : Permet de calculer les rendements excédentaires du fonds et sert au facteur Mkt-RF."
+    "* Usage : Permet de calculer les rendements excédentaires du fonds et sert au facteur Mkt-RF.\n",
+    "\n",
+    "`UMD`\n",
+    "* Nom complet : Up Minus Down (Momentum Factor)\n",
+    "* Type : float (%)\n",
+    "* Définition : Surperformance moyenne des portefeuilles d’actions “gagnantes” (rendements passés élevés) sur les portefeuilles “perdantes” (rendements passés faibles), où les gagnants et perdants sont définis sur le rendement cumulé des 12 derniers mois hors le plus récent (mois t-12 à t-2), en pondération value-weighted.\n",
+    "* Interprétation : Prime de Momentum – les actions qui ont récemment bien performé tendent à continuer de surperformer, et inversement pour les perdantes.\n",
+    "* Usage : Mesure un tilt Momentum (β_UMD > 0) ou anti-Momentum (β_UMD < 0) d’un fonds ; permet de reclasser une partie de l’« alpha » comme exposition systématique à la stratégie gagnants–perdants."
    ]
   },
   {
