Add ETF_monthly_returns notebook and update requirements.txt

--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3c9ecb72",
    "metadata": {},
    "outputs": [
@@ -196,6 +196,9 @@
     "X = sm.add_constant(X)\n",
     "y = merged['fund_excess']\n",
     "\n",
+    "# cov_type='HAC' compute heteroskedasticity-and-autocorrelation-consistent covariances (Newey–West style). \n",
+    "# cov_kwds={'maxlags':6} supplies options to that estimator.\n",
+    "# maxlags is the lag truncation used to account for serial correlation up to lag 6 (and typically uses a Bartlett kernel by default).\n",
     "model = sm.OLS(y, X).fit(cov_type='HAC', cov_kwds={'maxlags':6})\n",
     "print(model.summary())"
    ]
