Update ETF_monthly_returns notebook execution counts and adjust Universe.csv by removing MOM entry

--- a/ETF_monthly_returns.ipynb
+++ b/ETF_monthly_returns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "549daa3b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "24271a6d",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7c7995c6",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8753dada",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "Global start: 1993-01-22\n",
-      "Global end  : 2025-11-16\n"
+      "Global end  : 2025-11-30\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "dc963abe",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "45399ed9",
    "metadata": {},
    "outputs": [
@@ -171,10 +171,10 @@
       "Price           Close       High        Low       Open   Volume\n",
       "Ticker            SPY        SPY        SPY        SPY      SPY\n",
       "Date                                                           \n",
-      "1993-01-01  24.313032  24.330324  24.209278  24.330324  1003200\n",
-      "1993-02-01  24.572416  24.970140  23.690507  24.330324  5417600\n",
-      "1993-03-01  25.004721  25.367860  24.468658  24.658874  3019200\n",
-      "1993-04-01  24.479996  25.157583  24.063019  25.157583  2697200\n",
+      "1993-01-01  24.313034  24.330326  24.209280  24.330326  1003200\n",
+      "1993-02-01  24.572432  24.970156  23.690522  24.330339  5417600\n",
+      "1993-03-01  25.004723  25.367862  24.468660  24.658876  3019200\n",
+      "1993-04-01  24.479984  25.157571  24.063008  25.157571  2697200\n",
       "1993-05-01  25.140205  25.383442  24.375749  24.514741  1808000\n"
      ]
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "f601f7ca",
    "metadata": {},
    "outputs": [
@@ -202,8 +202,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of tickers: 53\n",
-      "['SPY', 'IVV', 'VOO', 'VTI', 'ITOT', 'SCHB', 'IWB', 'RSP', 'USMF', 'JPUS', 'OMFL', 'DGRO', 'SCHD', 'VIG', 'DVY', 'HDV', 'NOBL', 'SDY', 'RDVY', 'USMV', 'SPLV', 'XMLV', 'EFAV', 'LGLV', 'LVHD', 'MTUM', 'QMOM', 'SPMO', 'MOM', 'QUAL', 'SPHQ', 'JQUA', 'SUSA', 'IWM', 'IJR', 'SCHA', 'VO', 'MDY', 'SIZE', 'SMLF', 'VTV', 'IVE', 'IWD', 'VBR', 'IJS', 'VLUE', 'VOOG', 'IWF', 'VUG', 'IWP', 'IWS', 'IUSV', 'IUSG']\n",
+      "Number of tickers: 52\n",
+      "['SPY', 'IVV', 'VOO', 'VTI', 'ITOT', 'SCHB', 'IWB', 'RSP', 'USMF', 'JPUS', 'OMFL', 'DGRO', 'SCHD', 'VIG', 'DVY', 'HDV', 'NOBL', 'SDY', 'RDVY', 'USMV', 'SPLV', 'XMLV', 'EFAV', 'LGLV', 'LVHD', 'MTUM', 'QMOM', 'SPMO', 'QUAL', 'SPHQ', 'JQUA', 'SUSA', 'IWM', 'IJR', 'SCHA', 'VO', 'MDY', 'SIZE', 'SMLF', 'VTV', 'IVE', 'IWD', 'VBR', 'IJS', 'VLUE', 'VOOG', 'IWF', 'VUG', 'IWP', 'IWS', 'IUSV', 'IUSG']\n",
       "Downloading SPY...\n",
       "Downloading IVV...\n",
       "Downloading VOO...\n",
@@ -232,7 +232,6 @@
       "Downloading MTUM...\n",
       "Downloading QMOM...\n",
       "Downloading SPMO...\n",
-      "Downloading MOM...\n",
       "Downloading QUAL...\n",
       "Downloading SPHQ...\n",
       "Downloading JQUA...\n",
@@ -450,7 +449,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 53 columns</p>\n",
+       "<p>5 rows × 52 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -486,10 +485,10 @@
        "2025-10-01  498.850006  142.020004  138.250000  101.029999  169.830002  \n",
        "2025-11-01  483.519989  136.839996  137.850006  101.320000  165.000000  \n",
        "\n",
-       "[5 rows x 53 columns]"
+       "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "c585cc3c",
    "metadata": {},
    "outputs": [
@@ -530,10 +529,10 @@
       "Ticker           SPY  IVV  VOO  VTI  ITOT  SCHB  IWB  RSP  USMF  JPUS  ...  \\\n",
       "Date                                                                   ...   \n",
       "1993-01-01       NaN  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
-      "1993-02-01  0.010669  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
+      "1993-02-01  0.010668  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
       "1993-03-01  0.017593  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
-      "1993-04-01 -0.020985  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
-      "1993-05-01  0.026969  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
+      "1993-04-01 -0.020986  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
+      "1993-05-01  0.026970  NaN  NaN  NaN   NaN   NaN  NaN  NaN   NaN   NaN  ...   \n",
       "\n",
       "Ticker      VBR  IJS  VLUE  VOOG  IWF  VUG  IWP  IWS  IUSV  IUSG  \n",
       "Date                                                              \n",
@@ -543,7 +542,7 @@
       "1993-04-01  NaN  NaN   NaN   NaN  NaN  NaN  NaN  NaN   NaN   NaN  \n",
       "1993-05-01  NaN  NaN   NaN   NaN  NaN  NaN  NaN  NaN   NaN   NaN  \n",
       "\n",
-      "[5 rows x 53 columns]\n",
+      "[5 rows x 52 columns]\n",
       "Ticker           SPY       IVV       VOO       VTI      ITOT      SCHB  \\\n",
       "Date                                                                     \n",
       "2025-07-01  0.026056  0.025741  0.026026  0.025988  0.025847  0.025718   \n",
@@ -554,7 +553,7 @@
       "\n",
       "Ticker           IWB       RSP      USMF      JPUS  ...       VBR       IJS  \\\n",
       "Date                                                ...                       \n",
-      "2025-07-01  0.025562  0.014523 -0.009909  0.007506  ...  0.021470  0.018263   \n",
+      "2025-07-01  0.025562  0.014523 -0.009909  0.007506  ...  0.021471  0.018263   \n",
       "2025-08-01  0.021160  0.027174  0.024975  0.035632  ...  0.053109  0.086159   \n",
       "2025-09-01  0.030363  0.005726  0.008431  0.010718  ... -0.000431  0.009493   \n",
       "2025-10-01  0.025234 -0.005018 -0.024940 -0.013104  ... -0.006136  0.001097   \n",
@@ -576,15 +575,7 @@
       "2025-10-01  0.015644  0.033720  \n",
       "2025-11-01  0.002870 -0.028440  \n",
       "\n",
-      "[5 rows x 53 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\15145\\AppData\\Local\\Temp\\ipykernel_24732\\3378102776.py:2: FutureWarning: The default fill_method='pad' in DataFrame.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
-      "  returns_monthly = prices_monthly.pct_change()\n"
+      "[5 rows x 52 columns]\n"
      ]
     }
    ],
@@ -599,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "fddedb0d",
    "metadata": {},
    "outputs": [
@@ -611,26 +602,26 @@
       "Filtered rows: 148\n",
       "Ticker           SPY       IVV       VOO       VTI      ITOT      SCHB  \\\n",
       "Date                                                                     \n",
-      "2013-08-01 -0.029992 -0.030374 -0.030817 -0.030313 -0.029942 -0.029283   \n",
-      "2013-09-01  0.026642  0.027372  0.028724  0.033974  0.030198  0.032931   \n",
-      "2013-10-01  0.051406  0.051233  0.049928  0.047708  0.048606  0.047443   \n",
-      "2013-11-01  0.029638  0.029826  0.029960  0.027027  0.030446  0.028005   \n",
-      "2013-12-01  0.020386  0.020279  0.020821  0.021948  0.020260  0.021793   \n",
+      "2013-08-01 -0.029993 -0.030374 -0.030817 -0.030313 -0.029942 -0.029283   \n",
+      "2013-09-01  0.026643  0.027372  0.028724  0.033975  0.030198  0.032931   \n",
+      "2013-10-01  0.051407  0.051233  0.049928  0.047708  0.048606  0.047443   \n",
+      "2013-11-01  0.029638  0.029826  0.029961  0.027027  0.030447  0.028005   \n",
+      "2013-12-01  0.020386  0.020279  0.020820  0.021948  0.020260  0.021793   \n",
       "\n",
       "Ticker           IWB       RSP  USMF  JPUS  ...       VBR       IJS      VLUE  \\\n",
       "Date                                        ...                                 \n",
       "2013-08-01 -0.023018 -0.029203   NaN   NaN  ... -0.041709 -0.034147 -0.030386   \n",
-      "2013-09-01  0.031774  0.037720   NaN   NaN  ...  0.052975  0.062910  0.022277   \n",
-      "2013-10-01  0.047976  0.046187   NaN   NaN  ...  0.039229  0.037795  0.052541   \n",
-      "2013-11-01  0.027271  0.022209   NaN   NaN  ...  0.029324  0.042541  0.032975   \n",
-      "2013-12-01  0.021991  0.025179   NaN   NaN  ...  0.008702  0.008886  0.016388   \n",
+      "2013-09-01  0.031774  0.037721   NaN   NaN  ...  0.052976  0.062910  0.022276   \n",
+      "2013-10-01  0.047976  0.046186   NaN   NaN  ...  0.039229  0.037795  0.052541   \n",
+      "2013-11-01  0.027272  0.022209   NaN   NaN  ...  0.029324  0.042541  0.032975   \n",
+      "2013-12-01  0.021991  0.025180   NaN   NaN  ...  0.008702  0.008886  0.016387   \n",
       "\n",
       "Ticker          VOOG       IWF       VUG       IWP       IWS      IUSV  \\\n",
       "Date                                                                     \n",
-      "2013-08-01 -0.024984 -0.013616 -0.018544 -0.018120 -0.029696 -0.033688   \n",
-      "2013-09-01  0.034425  0.040863  0.044826  0.048257  0.038356  0.022172   \n",
-      "2013-10-01  0.053485  0.047621  0.045939  0.028641  0.049314  0.049707   \n",
-      "2013-11-01  0.031716  0.027434  0.023807  0.021433  0.009576  0.028128   \n",
+      "2013-08-01 -0.024984 -0.013617 -0.018544 -0.018120 -0.029696 -0.033689   \n",
+      "2013-09-01  0.034425  0.040863  0.044826  0.048257  0.038357  0.022172   \n",
+      "2013-10-01  0.053485  0.047621  0.045939  0.028641  0.049314  0.049708   \n",
+      "2013-11-01  0.031715  0.027434  0.023807  0.021433  0.009576  0.028129   \n",
       "2013-12-01  0.021264  0.024556  0.030340  0.029157  0.021770  0.016893   \n",
       "\n",
       "Ticker          IUSG  \n",
@@ -641,7 +632,7 @@
       "2013-11-01  0.028951  \n",
       "2013-12-01  0.023640  \n",
       "\n",
-      "[5 rows x 53 columns]\n"
+      "[5 rows x 52 columns]\n"
      ]
     }
    ],
@@ -663,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "a2920c89",
    "metadata": {},
    "outputs": [
@@ -689,14 +680,6 @@
     "print(\" - ETF_monthly_returns.csv\")\n",
     "print(\" - ETF_monthly_returns_filtered.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b8e3ad9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
