Refactor factor attribution notebook and update data files

--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b2f74526",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dbc0dfc2",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d59e96cf",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9e87fa54",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3ed47a4b",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a74234f3",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "91c03282",
    "metadata": {},
    "outputs": [],
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8f91e5a7",
    "metadata": {},
    "outputs": [],
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "05b32426",
    "metadata": {},
    "outputs": [],
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3c9ecb72",
    "metadata": {},
    "outputs": [
@@ -1320,142 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "723b8fd5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coef</th>\n",
-       "      <th>se</th>\n",
-       "      <th>t</th>\n",
-       "      <th>p</th>\n",
-       "      <th>ci_lower</th>\n",
-       "      <th>ci_upper</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>const</th>\n",
-       "      <td>-0.168588</td>\n",
-       "      <td>0.087734</td>\n",
-       "      <td>-1.921591</td>\n",
-       "      <td>5.465724e-02</td>\n",
-       "      <td>-0.340544</td>\n",
-       "      <td>0.003367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mkt-RF</th>\n",
-       "      <td>0.976992</td>\n",
-       "      <td>0.036122</td>\n",
-       "      <td>27.047110</td>\n",
-       "      <td>4.130419e-161</td>\n",
-       "      <td>0.906194</td>\n",
-       "      <td>1.047789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SMB</th>\n",
-       "      <td>0.091011</td>\n",
-       "      <td>0.042446</td>\n",
-       "      <td>2.144141</td>\n",
-       "      <td>3.202157e-02</td>\n",
-       "      <td>0.007818</td>\n",
-       "      <td>0.174204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HML</th>\n",
-       "      <td>0.346377</td>\n",
-       "      <td>0.036632</td>\n",
-       "      <td>9.455665</td>\n",
-       "      <td>3.209746e-21</td>\n",
-       "      <td>0.274580</td>\n",
-       "      <td>0.418174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RMW</th>\n",
-       "      <td>0.038724</td>\n",
-       "      <td>0.069693</td>\n",
-       "      <td>0.555642</td>\n",
-       "      <td>5.784554e-01</td>\n",
-       "      <td>-0.097871</td>\n",
-       "      <td>0.175320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMA</th>\n",
-       "      <td>0.104229</td>\n",
-       "      <td>0.059868</td>\n",
-       "      <td>1.740995</td>\n",
-       "      <td>8.168448e-02</td>\n",
-       "      <td>-0.013109</td>\n",
-       "      <td>0.221567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UMD</th>\n",
-       "      <td>-0.076899</td>\n",
-       "      <td>0.037227</td>\n",
-       "      <td>-2.065670</td>\n",
-       "      <td>3.885967e-02</td>\n",
-       "      <td>-0.149862</td>\n",
-       "      <td>-0.003935</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            coef        se          t              p  ci_lower  ci_upper\n",
-       "const  -0.168588  0.087734  -1.921591   5.465724e-02 -0.340544  0.003367\n",
-       "Mkt-RF  0.976992  0.036122  27.047110  4.130419e-161  0.906194  1.047789\n",
-       "SMB     0.091011  0.042446   2.144141   3.202157e-02  0.007818  0.174204\n",
-       "HML     0.346377  0.036632   9.455665   3.209746e-21  0.274580  0.418174\n",
-       "RMW     0.038724  0.069693   0.555642   5.784554e-01 -0.097871  0.175320\n",
-       "CMA     0.104229  0.059868   1.740995   8.168448e-02 -0.013109  0.221567\n",
-       "UMD    -0.076899  0.037227  -2.065670   3.885967e-02 -0.149862 -0.003935"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Récupérer coefficients et statistiques\n",
-    "coef_table = model.params.to_frame(name='coef')\n",
-    "coef_table['se'] = model.bse\n",
-    "coef_table['t'] = model.tvalues\n",
-    "coef_table['p'] = model.pvalues\n",
-    "ci = model.conf_int()\n",
-    "coef_table['ci_lower'] = ci.iloc[:, 0]\n",
-    "coef_table['ci_upper'] = ci.iloc[:, 1]\n",
-    "\n",
-    "# Affichage dans le notebook\n",
-    "display(coef_table)\n",
-    "\n",
-    "# Optionnel : sauvegarde\n",
-    "# coef_table.to_csv('factor_coefficients.csv', index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "be1d7dd7",
    "metadata": {},
    "outputs": [
@@ -1540,26 +1405,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c90b8b7",
+   "id": "6602b2c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# R\u00b2 du mod\u00e8le\n",
-    "r2 = model.rsquared\n",
-    "r2_adj = model.rsquared_adj\n",
+    "series_by_ticker = {}\n",
     "\n",
-    "pd.Series({'R2': r2, 'R2_adj': r2_adj}, name='model_fit')\n"
+    "tickers = (\n",
+    "    df_universe[\"Ticker\"]\n",
+    "    .dropna()\n",
+    "    .astype(str)\n",
+    "    .str.strip()\n",
+    "    .unique()\n",
+    ")\n",
+    "\n",
+    "tickers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6602b2c7",
+   "id": "75374360",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_returns"
-   ]
+   "source": []
   }
  ],
  "metadata": {
